--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gsap": "^3.12.5",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
+    "javascript-time-ago": "^2.5.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "mini-css-extract-plugin": "^2.4.5",
@@ -51,6 +52,7 @@
     "react-dom": "^18.2.0",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.22.3",
+    "react-time-ago": "^7.3.1",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.72.0",
