--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "devbuild": "tsc -b && vite build --mode development",
     "lint": "eslint .",
-    "watch": "npm-watch"
+    "watch": "npm-watch devbuild",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix "
+    ]
   },
   "watch": {
-    "build": {
+    "devbuild": {
       "patterns": [
         "src",
         "public"
@@ -25,31 +32,37 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.2",
-    "@tanstack/react-query": "^5.67.1",
+    "@tanstack/react-query": "5.69.0",
     "classnames": "^2.5.1",
     "gsap": "^3.12.7",
     "javascript-time-ago": "^2.5.11",
     "npm-watch": "^0.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0",
+    "react-router": "^7.4.0",
     "react-time-ago": "^7.3.3",
-    "sass": "^1.85.1"
+    "sass": "^1.86.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/chrome": "^0.0.308",
-    "@types/react": "^19.0.10",
+    "@eslint/js": "^9.23.0",
+    "@tanstack/react-query-devtools": "5.69.0",
+    "@types/chrome": "^0.0.310",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "babel-plugin-react-compiler": "^19.0.0-beta-40c6c23-20250301",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-40c6c23-20250301",
+    "babel-plugin-react-compiler": "^19.0.0-beta-3229e95-20250315",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-3229e95-20250315",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "prettier": "3.5.3",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.27.0",
+    "vite": "^6.2.2"
   }
 }
