--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:tools": "cross-env VITE_REACT_DEVTOOLS=true vite",
     "build": "tsc -b && vite build",
-    "devbuild": "tsc -b && vite build --mode development",
+    "devbuild": "tsc -b && cross-env NODE_ENV=development vite build --mode development --config vite.dev.config.ts",
     "lint": "eslint .",
     "watch": "npm-watch devbuild",
+    "watch:tools": "cross-env VITE_REACT_DEVTOOLS=true npm-watch devbuild",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -51,6 +53,7 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-react-compiler": "^19.0.0-beta-3229e95-20250315",
+    "cross-env": "^7.0.3",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
@@ -61,6 +64,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "prettier": "3.5.3",
+    "react-devtools-core": "^6.1.1",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.27.0",
     "vite": "^6.2.2"
